--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arsadi Bio Links</title>
+    <title>Akyas Bio Links</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
@@ -12,28 +12,28 @@
 <body>
 
     <!-- Background Animation Text -->
-    <span class="bg-text-animation">hello</span>
+    <span class="bg-text-animation">Welcome</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/logo-bg.png" alt="AR Logo">
-    <h1>Arsadi</h1>
-    <p>Frontend Developer & Content Creator</p>
+    <img class="my-photo" src="./img/logo.png" alt="AR Logo">
+    <h1>Akyas Mahira</h1>
+    <p>Fullstack Web Developer</p>
 
     <!-- Sosial Media -->
     <div class="sosmed">
-        <a href="https://tiktok.com/@uicodes" target="_blank">
+        <a href="https://tiktok.com/@zayssme" target="_blank">
             <i class="ph ph-tiktok-logo"></i>
         </a>
-        <a href="https://instagram.com/its.arsadi" target="_blank">
+        <a href="https://instagram.com/zayssme" target="_blank">
             <i class="ph ph-instagram-logo"></i>
         </a>
-        <a href="https://youtube.com/@rsad" target="_blank">
+        <!-- <a href="https://youtube.com/@rsad" target="_blank">
             <i class="ph ph-youtube-logo"></i>
-        </a>
-        <a href="https://linkedin.com/in/arsadi" target="_blank">
+        </a> -->
+        <a href="https://www.linkedin.com/in/muhammad-akyas-24a228241/" target="_blank">
             <i class="ph ph-linkedin-logo"></i>
         </a>
-        <a href="https://github.com/arsadii" target="_blank">
+        <a href="https://github.com/AkyasMahira" target="_blank">
             <i class="ph ph-github-logo"></i>
         </a>
     </div>
@@ -41,33 +41,34 @@
     <!-- Link List -->
     <ul class="links">
         <li>
-            <a href="https://discord.com" target="_blank" class="link-card">
+            <a href="https://akyasmahira.vercel.app" target="_blank" class="link-card">
                 <div class="link-icon">
-                    <i class="ph-fill ph-chat-circle-dots"></i>
+                    <i class="ph ph-app-window"></i>
                 </div>
-                <p class="link-text">Join Channel Discord</p>
+                <p class="link-text">My Personal Website</p>
                 <div class="link-action">
                     <i class="ph-fill ph-copy"></i>
                 </div>
             </a>
         </li>
-        <li>
+
+        <!-- <li>
             <a href="https://youtube.com/@rsad" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph-fill ph-chat-circle-dots"></i>
                 </div>
-                <p class="link-text">Channel Youtube</p>
+                <p class="link-text"></p>
                 <div class="link-action">
                     <i class="ph-fill ph-copy"></i>
                 </div>
             </a>
-        </li>
+        </li> -->
 
     </ul>
 
     <div class="copyright">
-        <img src="./img/logo-mark.png" alt="AR Logo">
-        <p>Copyright Arsadi &copy; 2023</p>
+        <!-- <img src="./img/logo.png" alt="AR Logo"> -->
+        <p>Copyright Akyas &copy; 2024</p>
     </div>
 
     <!-- Toast Notification -->
