--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akyas Bio Links</title>
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
@@ -15,7 +16,7 @@
     <span class="bg-text-animation">Welcome</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/logo.png" alt="AR Logo">
+    <img class="my-photo" src="./img/ava.jpeg" alt="AR Logo">
     <h1>Akyas Mahira</h1>
     <p>Fullstack Web Developer</p>
 
