--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Background Animation Text -->
-    <span class="bg-text-animation">Welcome</span>
+    <span class="bg-text-animation">Hi!</span>
 
     <!-- Profile -->
     <img class="my-photo" src="./img/ava.jpeg" alt="AR Logo">
