--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <span class="bg-text-animation">Hi!</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/ava.jpeg" alt="AR Logo">
-    <h1>Akyas Mahira</h1>
+    <img class="my-photo" src="./img/3.jpg" alt="AR Logo">
+    <h1>We Are</h1>
     <p>Fullstack Web Developer</p>
 
     <!-- Sosial Media -->
@@ -28,9 +28,6 @@
         <a href="https://instagram.com/zayssme" target="_blank">
             <i class="ph ph-instagram-logo"></i>
         </a>
-        <!-- <a href="https://youtube.com/@rsad" target="_blank">
-            <i class="ph ph-youtube-logo"></i>
-        </a> -->
         <a href="https://www.linkedin.com/in/muhammad-akyas-24a228241/" target="_blank">
             <i class="ph ph-linkedin-logo"></i>
         </a>
@@ -46,29 +43,45 @@
                 <div class="link-icon">
                     <i class="ph ph-app-window"></i>
                 </div>
-                <p class="link-text">My Personal Website</p>
+                <p class="link-text">Akyas Personal Website</p>
                 <div class="link-action">
                     <i class="ph-fill ph-copy"></i>
                 </div>
             </a>
         </li>
+    </ul>
 
-        <!-- <li>
-            <a href="https://youtube.com/@rsad" target="_blank" class="link-card">
+        <!-- Link List -->
+    <ul class="links">
+        <li>
+            <a href="https://febriant.vercel.app/" target="_blank" class="link-card">
                 <div class="link-icon">
-                    <i class="ph-fill ph-chat-circle-dots"></i>
+                    <i class="ph ph-app-window"></i>
                 </div>
-                <p class="link-text"></p>
+                <p class="link-text">Briant Personal Website</p>
                 <div class="link-action">
                     <i class="ph-fill ph-copy"></i>
                 </div>
             </a>
-        </li> -->
+        </li>
+    </ul>
 
+        <!-- Link List -->
+    <ul class="links">
+        <li>
+            <a href="-" target="_blank" class="link-card">
+                <div class="link-icon">
+                    <i class="ph ph-app-window"></i>
+                </div>
+                <p class="link-text">Andhika Personal Website</p>
+                <div class="link-action">
+                    <i class="ph-fill ph-copy"></i>
+                </div>
+            </a>
+        </li>
     </ul>
 
     <div class="copyright">
-        <!-- <img src="./img/logo.png" alt="AR Logo"> -->
         <p>Copyright Akyas &copy; 2024</p>
     </div>
 
