--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Profile -->
     <img class="my-photo" src="./img/3.jpg" alt="AR Logo">
-    <h1>We Are</h1>
+    <h1>We Own This</h1>
     <p>Fullstack Web Developer</p>
 
     <!-- Sosial Media -->
