update photo profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span class="bg-text-animation">Hi!</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/3.jpg" alt="AR Logo">
+    <img class="my-photo" src="./img/3maut.jpeg" alt="AR Logo">
     <h1>We Own This</h1>
     <p>Fullstack Web Developer</p>
 
