--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
 
     <!-- Background Animation Text -->
-    <span class="bg-text-animation">Hi!</span>
+    <span class="bg-text-animation">OUR TEAM</span>
 
     <!-- Profile -->
     <img class="my-photo" src="./img/3maut.jpeg" alt="AR Logo">
     <h1>We Own This</h1>
-    <p>Fullstack Web Developer</p>
+    <p>Student from SMK TI Pelita Nusantara</p>
 
     <!-- Sosial Media -->
     <div class="sosmed">
@@ -39,7 +39,7 @@
     <!-- Link List -->
     <ul class="links">
         <li>
-            <a href="https://akyasmahira.vercel.app" target="_blank" class="link-card">
+            <a href="https://zayssme.netlify.app" target="_blank" class="link-card">
                 <div class="link-icon">
                     <i class="ph ph-app-window"></i>
                 </div>
