--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span class="bg-text-animation">OUR TEAM</span>
 
     <!-- Profile -->
-    <img class="my-photo" src="./img/3maut.jpeg" alt="AR Logo">
+    <img class="my-photo" src="./img/3m.jpeg" alt="AR Logo">
     <h1>We Own This</h1>
     <p>Student from SMK TI Pelita Nusantara</p>
 
